list patients and show report

--- a/src/app/components/patients-table/patients-table.component.html
+++ b/src/app/components/patients-table/patients-table.component.html
@@ -4,15 +4,16 @@
       <tr>
         <th>Name</th>
         <th>Age</th>
-        <th>Status</th>
-
+        <th>Severity</th>
+        <th>Report</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-patient>
       <tr>
         <td>{{ patient.name }}</td>
-        <td>{{ patient.age }}</td>
-        <td>{{ patient.state }}</td>
+        <td>{{ calculateAge(patient.birthDate) }}</td>
+        <td>{{patient.severity}}</td>
+        <td><button pButton label="View Report" (click)="viewReport(patient.name)">See report</button></td>
       </tr>
     </ng-template>
   </p-table>
