--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,10 @@
 <div class="grid nested-grid">
   <div class="col-6">
-    <app-patients-table></app-patients-table>
+    <app-patients-table (patientSelected)="onPatientSelect($event)"></app-patients-table>
   </div>
   <div class="col-6">
     <div class="grid">
-      <div class="col-12">
-        <app-pie></app-pie>
-      </div>
-
-      <div class="col-12">
-        <app-line-chart></app-line-chart>
-      </div>
+      <app-patient-report [patientId]="selectedPatientId" ></app-patient-report>
     </div>
   </div>
-
 </div>
