--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-6">
     <div class="grid">
-      <app-patient-report [patientId]="selectedPatientId" ></app-patient-report>
+      <app-patient-report [patientId]="selectedPatientId" [patientName]="selectedPatientName"></app-patient-report>
     </div>
   </div>
 </div>
